--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,8 +23,8 @@ jobs:
         uses: actions/setup-python@v4.7.1
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Set up CMake
-        uses: lukka/get-cmake@v3.27.7
+      #- name: Set up CMake
+      #  uses: lukka/get-cmake@v3.27.7
       - name: Install Python dependencies
         run: pip install tox tox-gh-actions
       - name: Install EGL on Linux for headless Arcade
