--- a/pyproject.toml
+++ b/pyproject.toml
@@ -237,7 +237,6 @@ convention = "google"
 legacy_tox_ini = """
 [tox]
 envlist = clean, py310, py311, report
-isolated_build = true
 
 [gh-actions]
 python =
@@ -245,17 +244,18 @@ python =
     3.11: clean, py311, report
 
 [testenv]
-passenv = *
-deps = pytest-cov
+allowlist_externals = cmake
 commands =
     python -m build -c
     pytest --cov-append
+deps = pytest-cov
+passenv = *
 
 [testenv:clean]
-deps = pytest-cov
 commands = coverage erase
+deps = pytest-cov
 
 [testenv:report]
-deps = pytest-cov
 commands = coverage lcov
+deps = pytest-cov
 """
