--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,9 +31,7 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt-get update && sudo apt-get install libegl1
       - name: Run Tox
-        run: |
-          cmake --version
-          tox
+        run: tox
       - name: Upload coverage report
         uses: coverallsapp/github-action@v2.2.3
         with:
