--- a/pyproject.toml
+++ b/pyproject.toml
@@ -244,6 +244,7 @@ python =
     3.11: clean, py311, report
 
 [testenv]
+allowlist_externals = echo
 commands =
     echo $PATH
     python -m build -c
