--- a/pyproject.toml
+++ b/pyproject.toml
@@ -237,6 +237,7 @@ convention = "google"
 legacy_tox_ini = """
 [tox]
 envlist = clean, py310, py311, report
+passenv = *
 
 [gh-actions]
 python =
@@ -244,10 +245,12 @@ python =
     3.11: clean, py311, report
 
 [testenv]
+allowlist_externals = cmake
 commands =
     python -m build -c
     pytest --cov-append
 deps = pytest-cov
+passenv = *
 setenv =
     PATH = {env:PATH}
 
