--- a/pyproject.toml
+++ b/pyproject.toml
@@ -237,7 +237,6 @@ convention = "google"
 legacy_tox_ini = """
 [tox]
 envlist = clean, py310, py311, report
-passenv = *
 
 [gh-actions]
 python =
@@ -245,13 +244,11 @@ python =
     3.11: clean, py311, report
 
 [testenv]
-whitelist_externals = whereis
-allowlist_externals = whereis
 commands =
+    cmake --version
     python -m build -c
     pytest --cov-append
 deps = pytest-cov
-passenv = *
 
 [testenv:clean]
 commands = coverage erase
