--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -58,11 +58,11 @@ jobs:
           cmake --build build-coverage
       - name: f
         run: |
-          ls build-coverage
+          ls src/hades_extensions/build-coverage
           echo "hello"
-          ls build-coverage/src
+          ls src/hades_extensions/build-coverage/src
           echo "hello"
-          ls build-coverage/tests
+          ls src/hades_extensions/build-coverage/tests
       - name: Run CTest
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: ctest --output-on-failure --no-tests=error --test-dir build-coverage
