--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -63,6 +63,8 @@ jobs:
           ls src/hades_extensions/build-coverage/src
           echo "hello"
           ls src/hades_extensions/build-coverage/tests
+          echo "hello"
+          cat src/hades_extensions/build-coverage/tests/CTestTestfile.cmake
       - name: Run CTest
         working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: ctest --output-on-failure --no-tests=error --test-dir build-coverage
+        run: ctest --output-on-failure --no-tests=error --test-dir build-coverage/tests
