--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -57,7 +57,9 @@ jobs:
         run: ctest --output-on-failure --no-tests=error --test-dir tests
       - name: Upload coverage report
         if: matrix.os == 'ubuntu-latest'
-        run: gcovr --exclude build --exclude test --html-details output.html
+        run: |
+          pip install gcovr
+          gcovr --exclude build --exclude test --html-details output.html
       - name: Upload coverage report to github
         uses: actions/upload-artifact@v2
         with:
