--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -52,10 +52,13 @@ jobs:
         run: |
           cmake --preset Coverage
           cmake --build build-coverage
-      - name: Run CTest and generate the coverage report
+      - name: Run CTest
+        working-directory: "${{ github.workspace }}/src/hades_extensions/build-coverage"
+        run: ctest --output-on-failure --no-tests=error --test-dir tests
+      - name: Upload coverage report
+        if: matrix.os == 'ubuntu-latest'
         working-directory: "${{ github.workspace }}/src/hades_extensions/build-coverage"
         run: |
-          ctest --output-on-failure --no-tests=error --test-dir tests
           pip install gcovr
           gcovr --exclude build-coverage --exclude tests --exclude src/binding.cpp --html-details output.html
       - name: Upload coverage report to github
