--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,36 +7,7 @@ on:
   pull_request:
 
 jobs:
-  python:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        python-version: ["3.10", "3.11"]
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4.1.1
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4.7.1
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Set up CMake
-        uses: lukka/get-cmake@v3.27.7
-      - name: Install Python dependencies
-        run: pip install tox tox-gh-actions
-      - name: Install EGL on Linux for headless Arcade
-        if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get update && sudo apt-get install libegl1
-      - name: Run Tox
-        run: tox
-      - name: Upload coverage report
-        uses: coverallsapp/github-action@v2.2.3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          parallel: true
+
   cpp:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -64,7 +35,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel: true
   coveralls:
-    needs: [python, cpp]
+    needs: [cpp]
     runs-on: ubuntu-latest
     steps:
       - name: Upload coverage reports
