--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -52,8 +52,9 @@ jobs:
         run: |
           ctest --output-on-failure --no-tests=error --test-dir build-coverage/tests
           pip install gcovr
-          gcovr --exclude build-coverage --exclude tests --exclude src/binding.cpp --coveralls
+          gcovr --exclude build-coverage --exclude tests --exclude src/binding.cpp --coveralls coverage.json
       - name: Upload coverage report
         uses: coverallsapp/github-action@v2.2.3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          file: "${{ github.workspace }}/src/hades_extensions/coveralls.json"
