--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,6 +53,10 @@ jobs:
           ctest --output-on-failure --no-tests=error --test-dir build-coverage/tests
           pip install gcovr
           gcovr --exclude build-coverage --exclude tests --exclude src/binding.cpp --coveralls coverage.json
+      - name: f
+        run: |
+          ls "${{ github.workspace }}/src/hades_extensions"
+          cat "${{ github.workspace }}/src/hades_extensions/coverage.json"
       - name: Upload coverage report
         uses: coverallsapp/github-action@v2.2.3
         with:
