--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,6 +32,13 @@ jobs:
         run: sudo apt-get update && sudo apt-get install libegl1
       - name: Run Tox
         run: tox
+      - name: Upload coverage report
+        uses: coverallsapp/github-action@v2.2.3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          file: ./coverage.lcov
+          flag-name: run-python-${{ matrix.os }}-${{ matrix.python-version }}
+          parallel: true
   cpp:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -53,12 +60,19 @@ jobs:
           ctest --output-on-failure --no-tests=error --test-dir build-coverage/tests
           pip install gcovr
           gcovr --exclude build-coverage --exclude tests --exclude src/binding.cpp --coveralls coverage.json
-      - name: f
-        run: |
-          ls "${{ github.workspace }}/src/hades_extensions"
-          cat "${{ github.workspace }}/src/hades_extensions/coverage.json"
       - name: Upload coverage report
         uses: coverallsapp/github-action@v2.2.3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          file: "${{ github.workspace }}/src/hades_extensions/coverage.json"
+          file: ${{ github.workspace }}/src/hades_extensions/coverage.json
+          flag-name: run-cpp-${{ matrix.os }}
+          parallel: true
+  finish:
+    runs-on: ubuntu-latest
+    needs: [python, cpp]
+    steps:
+      - name: Upload coverage report
+        uses: coverallsapp/github-action@v2.2.3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          parallel-finished: true
