--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -69,7 +69,7 @@ jobs:
           parallel: true
   finish:
     runs-on: ubuntu-latest
-    needs: [python, cpp]
+    needs: cpp
     steps:
       - name: Upload coverage report
         uses: coverallsapp/github-action@v2.2.3
