--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Python 3.11
         uses: actions/setup-python@v4.7.1
         with:
-          python-version: "3.11"
+          python-version: 3.11
       - name: Install Poetry
         uses: snok/install-poetry@v1.3.4
         with:
@@ -24,6 +24,6 @@ jobs:
       - name: Build the game
         run: python -m build --executable
       - name: Upload the release
-        uses: svenstaro/upload-release-action@v2.7.0
+        uses: svenstaro/upload-release-action@2.7.0
         with:
           file: hades.zip
