--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -17,7 +17,7 @@ jobs:
       contents: read
     strategy:
       matrix:
-        language: [python, cpp]
+        language: ["python", "cpp"]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
