--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: ["3.10", "3.11"]
+        python-version: [3.10, 3.11]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
@@ -46,12 +46,12 @@ jobs:
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
       - name: Configure and build CMake
-        working-directory: "${{ github.workspace }}/src/hades_extensions"
+        working-directory: ${{ github.workspace }}/src/hades_extensions
         run: |
           cmake --preset Coverage
           cmake --build build-coverage
       - name: Run CTest and generate the coverage report
-        working-directory: "${{ github.workspace }}/src/hades_extensions"
+        working-directory: ${{ github.workspace }}/src/hades_extensions
         run: |
           ctest --output-on-failure --no-tests=error --test-dir build-coverage/tests
           pip install gcovr
