--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -1,4 +1,4 @@
-name: "CodeQL"
+name: CodeQL
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
   pull_request:
   schedule:
-    - cron: '0 0 * * 1'
+    - cron: "0 0 * * 1"
 
 jobs:
   CodeQL:
@@ -17,7 +17,7 @@ jobs:
       contents: read
     strategy:
       matrix:
-        language: ["python", "cpp"]
+        language: [python, cpp]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
@@ -30,7 +30,7 @@ jobs:
         if: matrix.language == 'python'
         uses: actions/setup-python@v4.7.1
         with:
-          python-version: "3.11"
+          python-version: 3.11
       - name: Set up CMake
         if: matrix.language == 'cpp'
         uses: lukka/get-cmake@v3.27.7
@@ -41,13 +41,13 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
       - name: Install Python dependencies
-        if: matrix.language == 'python'
+        if: matrix.language == python
         run: poetry install --no-interaction
       - name: Configure CMake
         if: matrix.language == 'cpp'
-        working-directory: "${{ github.workspace }}/src/hades_extensions"
+        working-directory: ${{ github.workspace }}/src/hades_extensions
         run: cmake --preset Debug
       - name: Perform CodeQL analysis
         uses: github/codeql-action/analyze@v2.22.8
         with:
-          category: "/language:${{ matrix.language }}"
+          category: /language:${{ matrix.language }}
