--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -41,7 +41,7 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
       - name: Install Python dependencies
-        if: matrix.language == python
+        if: matrix.language == 'python'
         run: poetry install --no-interaction
       - name: Configure CMake
         if: matrix.language == 'cpp'
