--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
       run:
         shell: bash
     permissions:
-      packages: write
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
