--- a/pyproject.toml
+++ b/pyproject.toml
@@ -248,6 +248,7 @@ commands =
     python -m build -c
     pytest --cov-append
 deps = pytest-cov
+passenv = *
 
 [testenv:clean]
 commands = coverage erase
