--- a/src/hades_extensions/tests/CMakeLists.txt
+++ b/src/hades_extensions/tests/CMakeLists.txt
@@ -1,13 +1,4 @@
-# Fetch the GoogleTest repository and initialise it
-FetchContent_Declare(
-        googletest
-        GIT_REPOSITORY https://github.com/google/googletest.git
-        GIT_TAG v1.13.0
-)
-set(gtest_force_shared_crt ON CACHE BOOL "Always use msvcrt.dll" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-# Create an executable from our test code and link it against GTest and the C++ library then add it as a test
+# Create an executable from our test code and link it against GTest and the C++ library
 include(CTest)
 add_executable(${TEST_MODULE}
         ${CMAKE_SOURCE_DIR}/tests/game_objects/test_registry.cpp
@@ -28,4 +19,6 @@ target_link_libraries(
         gtest_main
         ${CPP_LIB}
 )
+
+# Add the executable as a test to CTest
 add_test(NAME Tests COMMAND ${TEST_MODULE})
