--- a/src/hades_extensions/tests/CMakeLists.txt
+++ b/src/hades_extensions/tests/CMakeLists.txt
@@ -1,3 +1,12 @@
+# Fetch the GoogleTest repository and initialise it
+FetchContent_Declare(
+        googletest
+        GIT_REPOSITORY https://github.com/google/googletest.git
+        GIT_TAG v1.13.0
+)
+set(gtest_force_shared_crt ON CACHE BOOL "Always use msvcrt.dll" FORCE)
+FetchContent_MakeAvailable(googletest)
+
 # Create an executable from our test code and link it against GTest and the C++ library
 include(CTest)
 add_executable(${TEST_MODULE}
