--- a/src/hades_extensions/tests/CMakeLists.txt
+++ b/src/hades_extensions/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(${TEST_MODULE}
         ${CMAKE_SOURCE_DIR}/tests/generation/test_map.cpp
         ${CMAKE_SOURCE_DIR}/tests/generation/test_primitives.cpp
 )
+target_include_directories(${TEST_MODULE} PUBLIC ${CMAKE_SOURCE_DIR}/tests)
 target_link_libraries(
         ${TEST_MODULE}
         gtest_main
