--- a/src/hades_extensions/CMakeLists.txt
+++ b/src/hades_extensions/CMakeLists.txt
@@ -1,4 +1,5 @@
 # Define some environment variables
+cmake_minimum_required(VERSION 3.25.2)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
