--- a/pyproject.toml
+++ b/pyproject.toml
@@ -230,7 +230,7 @@ src = ["src"]
     "S101",  # Ignore flake8-bandit assert rule for the tests
 ]
 
-[tool.ruff.pydocstyle]
+[tool.ruffhcehf.pydocstyle]
 convention = "google"
 
 [tool.tox]
@@ -246,10 +246,10 @@ python =
 [testenv]
 commands =
     python -m build -c
+    python -c "import hades_extensions"
     pytest --cov-append
 deps = pytest-cov
 passenv = *
-usedevelop = true
 
 [testenv:clean]
 commands = coverage erase
