--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,6 +29,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install libegl1
       - name: Run Tox
         run: |
+          pip install setuptools
           python -m build -c
           python -c "import hades_extensions"
           python -c "from hades_extensions.game_objects import SPRITE_SIZE; print(SPRITE_SIZE)"
@@ -73,3 +74,5 @@ jobs:
         uses: coverallsapp/github-action@v2.2.3
         with:
           parallel-finished: true
+
+# TODO: Move towards passing full --cpp or --executable to build.py + pass -Wall and -Wextra to cmake
