--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,7 +29,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install libegl1
       - name: Run Tox
         run: |
-          pip install setuptools
+          pip install setuptools wheel
           python -m build -c
           python -c "import hades_extensions"
           python -c "from hades_extensions.game_objects import SPRITE_SIZE; print(SPRITE_SIZE)"
