--- a/pyproject.toml
+++ b/pyproject.toml
@@ -245,11 +245,9 @@ python =
 
 [testenv]
 commands =
-    python -m tox_poetry_installer.install
-    {envpython} -m build -c
+    python -m build -c
     pytest --cov-append
 deps = pytest-cov
-    tox-poetry-installer
 passenv = *
 
 [testenv:clean]
