--- a/pyproject.toml
+++ b/pyproject.toml
@@ -246,10 +246,12 @@ python =
 [testenv]
 commands =
     python -m build -c
-    python -c "from hades_extensions.game_objects import SPRITE_SIZE; print(SPRITE_SIZE)"
+    ls .tox/py310/Lib/site-packages/
+    ls .tox/py311/Lib/site-packages/
     pytest --cov-append
 deps = pytest-cov
 passenv = *
+allowlist_externals = ls
 
 [testenv:clean]
 commands = coverage erase
