--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,13 +22,13 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
-      - name: Install Python dependencies
-        run: pip install tox tox-gh-actions
       - name: Install EGL on Linux for headless Arcade
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt-get update && sudo apt-get install libegl1
-      - name: Run Tox
-        run: tox
+      - name: Run Nox
+        run: |
+          pip install nox
+          nox
       - name: Upload coverage report
         uses: coverallsapp/github-action@v2.2.3
         with:
