--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,7 +29,7 @@ jobs:
         run: |
           pip install nox
           nox -l
-          nox --session tests-{{ matrix.python-version }}
+          nox --session tests-${{ matrix.python-version }}
       - name: Upload coverage report
         uses: coverallsapp/github-action@v2.2.3
         with:
