--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,18 +20,17 @@ jobs:
         uses: actions/setup-python@v4.7.1
         with:
           python-version: ${{ matrix.python-version }}
-      - name: set up msvc
+      - name: Set up MSVC
         uses: ilammy/msvc-dev-cmd@v1.12.1
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
       - name: Install EGL on Linux for headless Arcade
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt-get update && sudo apt-get install libegl1
-      - name: Run Nox
+      - name: Run Tox
         run: |
-          pip install nox
-          nox -l
-          nox --session tests-${{ matrix.python-version }}
+          pip install tox tox-gh-actions
+          tox
       - name: Upload coverage report
         uses: coverallsapp/github-action@v2.2.3
         with:
