--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,11 +53,12 @@ jobs:
           cmake --preset Coverage
           cmake --build build-coverage
       - name: Run CTest and generate the coverage report
+        working-directory: ${{ github.workspace }}/src/hades_extensions
         run: |
-          ctest --output-on-failure --no-tests=error --test-dir ${{ github.workspace }}/src/hades_extensions
+          ctest --output-on-failure --no-tests=error --test-dir build-coverage/tests
           pip install gcovr
           ls ${{ github.workspace }}/src/hades_extensions
-          gcovr --exclude ${{ github.workspace }}/src/hades_extensions/build-coverage --exclude ${{ github.workspace }}/src/hades_extensions/tests --exclude ${{ github.workspace }}/src/hades_extensions/src/binding.cpp --coveralls coverage.json
+          gcovr --exclude build-coverage --exclude tests --exclude src/binding.cpp --coveralls coverage.json
       - name: Upload coverage report
         uses: coverallsapp/github-action@v2.2.3
         with:
