--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -62,7 +62,7 @@ jobs:
       - name: Upload coverage report
         uses: coverallsapp/github-action@v2.2.3
         with:
-          file: coverage.json
+          file: ${{ github.workspace }}/src/hades_extensions/coverage.json
           flag-name: run-cpp-${{ matrix.os }}
           parallel: true
   finish:
