--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -48,16 +48,16 @@ jobs:
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
       - name: Configure and build CMake
-        working-directory: ${{ github.workspace }}/src
+        working-directory: ${{ github.workspace }}/src/hades_extensions
         run: |
           cmake --preset Coverage
           cmake --build build-coverage
       - name: Run CTest and generate the coverage report
         working-directory: ${{ github.workspace }}/src
         run: |
-          ctest --output-on-failure --no-tests=error --test-dir build-coverage/tests
+          ctest --output-on-failure --no-tests=error --test-dir hades_extensions/build-coverage/tests
           pip install gcovr
-          gcovr --exclude hades_extensions/build-coverage --exclude hades_extensions//tests --exclude hades_extensions//src/binding.cpp --coveralls coverage.json
+          gcovr --exclude hades_extensions/build-coverage --exclude hades_extensions/tests --exclude hades_extensions/src/binding.cpp --coveralls coverage.json
       - name: Upload coverage report
         uses: coverallsapp/github-action@v2.2.3
         with:
