--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -49,13 +49,12 @@ jobs:
         uses: lukka/get-cmake@v3.27.7
       - name: Configure and build CMake
         run: |
-          cmake --preset Coverage
+          cmake ${{ github.workspace }}/src/hades_extensions --preset Coverage
           cmake --build build-coverage
       - name: Run CTest and generate the coverage report
         run: |
           ctest --output-on-failure --no-tests=error --test-dir build-coverage/tests
           pip install gcovr
-          ls ${{ github.workspace }}/src/hades_extensions
           gcovr --exclude build-coverage --exclude ${{ github.workspace }}/src/hades_extensions/tests --exclude ${{ github.workspace }}/src/hades_extensions/src/binding.cpp --coveralls coverage.json
       - name: Upload coverage report
         uses: coverallsapp/github-action@v2.2.3
