--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -56,7 +56,7 @@ jobs:
         run: |
           ctest --output-on-failure --no-tests=error --test-dir ${{ github.workspace }}/src/hades_extensions/build-coverage/tests
           pip install gcovr
-          gcovr -r ${{ github.workspace }}/src/hades_extensions --exclude build-coverage --exclude tests --exclude src/binding.cpp --coveralls coverage.json
+          gcovr -r ${{ github.workspace }}/src --exclude hades_extensions/build-coverage --exclude hades_extensions/tests --exclude hades_extensions/src/binding.cpp --coveralls coverage.json
       - name: Upload coverage report
         uses: coverallsapp/github-action@v2.2.3
         with:
