--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -32,6 +32,11 @@ jobs:
       - name: Set up CMake
         if: matrix.language == 'cpp'
         uses: lukka/get-cmake@v3.27.7
+      - name: Set up vcpkg
+        if: matrix.language == 'cpp'
+        uses: microsoft/vcpkg@v1.2.0
+        with:
+          vcpkgGitCommitId: 2023.11.20
       - name: Install Poetry
         if: matrix.language == 'python'
         uses: snok/install-poetry@v1.3.4
