--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -14,6 +14,10 @@ jobs:
         uses: actions/checkout@v4.1.1
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
+      - name: Set up vcpkg
+        uses: microsoft/vcpkg@v1.2.0
+        with:
+          vcpkgGitCommitId: 2023.11.20
       - name: Configure CMake
         working-directory: ${{ github.workspace }}/src/hades_extensions
         run: cmake --preset Debug
@@ -39,6 +43,10 @@ jobs:
         uses: actions/checkout@v4.1.1
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
+      - name: Set up vcpkg
+        uses: microsoft/vcpkg@v1.2.0
+        with:
+          vcpkgGitCommitId: 2023.11.20
       - name: Run clang-format
         uses: jidicula/clang-format-action@v4.11.0
         with:
