--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,6 +22,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Set up MSVC
         uses: ilammy/msvc-dev-cmd@v1.12.1
+      - name: Set up vcpkg
+        uses: microsoft/vcpkg@v1.2.0
+        with:
+          vcpkgGitCommitId: 2023.11.20
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
       - name: Install EGL on Linux for headless Arcade
@@ -47,6 +51,10 @@ jobs:
         uses: actions/checkout@v4.1.1
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
+      - name: Set up vcpkg
+        uses: microsoft/vcpkg@v1.2.0
+        with:
+          vcpkgGitCommitId: 2023.11.20
       - name: Configure and build CMake
         working-directory: ${{ github.workspace }}/src/hades_extensions
         run: |
