--- a/src/hades_extensions/tests/CMakeLists.txt
+++ b/src/hades_extensions/tests/CMakeLists.txt
@@ -1,11 +1,5 @@
 # Fetch the GoogleTest repository and initialise it
-FetchContent_Declare(
-        googletest
-        GIT_REPOSITORY https://github.com/google/googletest.git
-        GIT_TAG v1.13.0
-)
-set(gtest_force_shared_crt ON CACHE BOOL "Always use msvcrt.dll" FORCE)
-FetchContent_MakeAvailable(googletest)
+find_package(gtest CONFIG REQUIRED)
 
 # Create an executable from our test code and link it against GTest and the C++ library
 include(CTest)
@@ -26,7 +20,7 @@ add_executable(${TEST_MODULE}
 target_include_directories(${TEST_MODULE} PUBLIC ${CMAKE_SOURCE_DIR}/tests)
 target_link_libraries(
         ${TEST_MODULE}
-        gtest_main
+        GTest::gtest_main
         ${CPP_LIB}
 )
 
