--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
       - name: Set up vcpkg
-        uses: microsoft/vcpkg@v1.2.0
+        uses: lukka/run-vcpkg@v11.3
         with:
           vcpkgGitCommitId: 2023.11.20
       - name: Configure CMake
@@ -44,7 +44,7 @@ jobs:
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
       - name: Set up vcpkg
-        uses: microsoft/vcpkg@v1.2.0
+        uses: lukka/run-vcpkg@v11.3
         with:
           vcpkgGitCommitId: 2023.11.20
       - name: Run clang-format
