--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,6 +24,8 @@ jobs:
         uses: ilammy/msvc-dev-cmd@v1.12.1
       - name: Set up vcpkg
         uses: lukka/run-vcpkg@v11.3
+        with:
+          vcpkgDirectory: ${{ github.workspace }}/src/hades_extensions/vcpkg
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
       - name: Install EGL on Linux for headless Arcade
@@ -51,6 +53,8 @@ jobs:
         uses: lukka/get-cmake@v3.27.7
       - name: Set up vcpkg
         uses: lukka/run-vcpkg@v11.3
+        with:
+          vcpkgDirectory: ${{ github.workspace }}/src/hades_extensions/vcpkg
       - name: Configure and build CMake
         working-directory: ${{ github.workspace }}/src/hades_extensions
         run: |
