--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -49,8 +49,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
+        with:
+          submodules: recursive
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
+      - name: Set up vcpkg
+        uses: lukka/run-vcpkg@v11.3
+        with:
+          vcpkgDirectory: ${{ github.workspace }}/src/hades_extensions/vcpkg
       - name: Configure and build CMake
         working-directory: ${{ github.workspace }}/src/hades_extensions
         run: |
