--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -51,6 +51,8 @@ jobs:
         uses: actions/checkout@v4.1.1
         with:
           submodules: recursive
+      - name: Set up MSVC
+        uses: ilammy/msvc-dev-cmd@v1.12.1
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
       - name: Set up vcpkg
